src/objects/WarrantyInformations__x.object
<CustomObject>
    <description>WarrantyInformations</description>
    <externalDataSource>ODS_Data</externalDataSource>
    <externalName>WarrantyInformations</externalName>
    <fields>
        <fullName>CntrAprvlDt__c</fullName>
        <description>CntrAprvlDt</description>
        <externalDeveloperName>CntrAprvlDt</externalDeveloperName>
        <label>Contract Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CntrDt__c</fullName>
        <description>CntrDt</description>
        <externalDeveloperName>CntrDt</externalDeveloperName>
        <label>Contract Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CntrMaturityDt__c</fullName>
        <description>CntrMaturityDt</description>
        <externalDeveloperName>CntrMaturityDt</externalDeveloperName>
        <label>Contract Maturity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CntrNum__c</fullName>
        <description>CntrNum</description>
        <externalDeveloperName>CntrNum</externalDeveloperName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CntrOptCd__c</fullName>
        <description>CntrOptCd</description>
        <externalDeveloperName>CntrOptCd</externalDeveloperName>
        <label>Contract Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CntrStsCd__c</fullName>
        <description>CntrStsCd</description>
        <externalDeveloperName>CntrStsCd</externalDeveloperName>
        <label>Contract Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CntrStsDt__c</fullName>
        <description>CntrStsDt</description>
        <externalDeveloperName>CntrStsDt</externalDeveloperName>
        <label>Contract Status Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CntrTypCd__c</fullName>
        <description>CntrTypCd</description>
        <externalDeveloperName>CntrTypCd</externalDeveloperName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrdtLnCd__c</fullName>
        <description>PrdtLnCd</description>
        <externalDeveloperName>PrdtLnCd</externalDeveloperName>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RgstrnDt__c</fullName>
        <description>RgstrnDt</description>
        <externalDeveloperName>RgstrnDt</externalDeveloperName>
        <label>Vehicle Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SoldDealrCd__c</fullName>
        <description>SoldDealrCd</description>
        <externalDeveloperName>SoldDealrCd</externalDeveloperName>
        <label>Retail Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransDealrCd__c</fullName>
        <description>TransDealrCd</description>
        <externalDeveloperName>TransDealrCd</externalDeveloperName>
        <label>Warranty Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vin__c</fullName>
        <description>Vin</description>
        <externalDeveloperName>Vin</externalDeveloperName>
        <label>VIN / Serial #</label>
        <length>128</length>
        <referenceTargetField>VIN__c.ProductSerialNumber__c</referenceTargetField>
        <referenceTo>VIN__c</referenceTo>
        <relationshipLabel>Warranty Information</relationshipLabel>
        <relationshipName>WarrantyInformations</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>WrntyPlusId__c</fullName>
        <description>WrntyPlusId</description>
        <externalDeveloperName>WrntyPlusId</externalDeveloperName>
        <label>Warranty Plus ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Warranty Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Warranty Information</pluralLabel>
</CustomObject>